--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -314,7 +314,7 @@ section.home {
 #confirmationWindow,
 #message,
 #emptyCartWindow,
-#message1 {
+#message1, #message2 {
   position: fixed;
   top: 50%;
   left: 50%;
